--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,15 +32,17 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
+//    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
-//    implementation 'com.github.dhaval2404:imagepicker:2.1'
+    implementation 'com.zolad:zoominimageview:1.0.0'
 
 
 }
