--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,17 +32,14 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-
-//    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
-
-    implementation 'com.zolad:zoominimageview:1.0.0'
+    implementation 'com.jsibbold:zoomage:1.3.1'
 
 
 }
