--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:theme="@style/Theme.ImagePickerApp">
         <activity
             android:name=".SplashActivity"
+            android:configChanges="orientation"
             android:exported="true"
-            android:screenOrientation="portrait">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,7 +26,8 @@
             android:name=".MainActivity"
             android:exported="true"
             android:noHistory="true"
-            android:screenOrientation="portrait" />
+            android:configChanges="orientation|keyboardHidden"
+             />
     </application>
 
 </manifest>
