--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,8 @@
         android:theme="@style/Theme.ImagePickerApp">
         <activity
             android:name=".SplashActivity"
-            android:configChanges="orientation"
-            android:exported="true"
-            >
+            android:configChanges="orientation|keyboardHidden"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,10 +23,9 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:noHistory="true"
             android:configChanges="orientation|keyboardHidden"
-             />
+            android:exported="true"
+            android:noHistory="true" />
     </application>
 
 </manifest>
